Used the Process API from the JDK
Signed-off-by: Thomas Segismont <tsegismont@gmail.com>